[Complete] Create Blog with html+js

--- a/NKKDotNetCore.Html/blog.html
+++ b/NKKDotNetCore.Html/blog.html
@@ -37,6 +37,7 @@
           class="form-control"
           aria-label="Sizing example input"
           aria-describedby="inputGroup-sizing-default"
+          id="txtTitle"
         />
       </div>
 
@@ -49,6 +50,7 @@
           class="form-control"
           aria-label="Sizing example input"
           aria-describedby="inputGroup-sizing-default"
+          id="txtAuthor"
         />
       </div>
 
@@ -61,10 +63,11 @@
           class="form-control"
           aria-label="Sizing example input"
           aria-describedby="inputGroup-sizing-default"
+          id="txtContent"
         />
       </div>
       <button type="button" class="btn btn-dark">Cancel</button>
-      <button type="button" class="btn btn-primary">Save</button>
+      <button type="button" id="btnSave" class="btn btn-primary">Save</button>
     </div>
 
     <script
@@ -72,5 +75,8 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="custom.js"></script>
   </body>
 </html>
